--- a/mostrarnumerosinicioyfin.html
+++ b/mostrarnumerosinicioyfin.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Mostrar numeros desde inicio hasta fin</h1>
+        <a href="tablas.html">Ir a tablas</a>
         <div class="mb-3">
             <label for="input_inicio" class="form-label">Numero de inicio:</label>
             <input type="number" class="form-control" id="input_inicio" placeholder="Ingrese el numero de inicio">
